kubernetes/apps/iot/emqx/cluster/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app emqx-dashboard
spec:
  ingressClassName: internal
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: mqtt cluster
    gethomepage.dev/group: automation
    gethomepage.dev/icon: sh-emqx.svg
    gethomepage.dev/name: emqx
    gethomepage.dev/app: *app
  rules:
    - host: emqx.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emqx-dashboard
                port:
                  number: 18083
